from datetime import datetime, timezone
from typing import TYPE_CHECKING, List, Optional

from pydantic import computed_field
from sqlmodel import Field, Relationship, SQLModel

if TYPE_CHECKING:
    from .content import Quiz
    from .stage import Participant, Room


def get_utc_now():
    return datetime.now(timezone.utc)


class Teacher(SQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    username: str = Field(index=True, unique=True)
    email: str = Field(unique=True)
    hashed_password: str
    is_verified: bool = Field(default=False)
    verification_code: Optional[str] = Field(default=None)
    verification_code_expires_at: Optional[datetime] = Field(default=None)
    reset_code: Optional[str] = Field(default=None)
    reset_code_expires_at: Optional[datetime] = Field(default=None)

    quizzes: List["Quiz"] = Relationship(
        back_populates="teacher", sa_relationship_kwargs={"cascade": "all, delete-orphan"}
    )
    groups: List["Group"] = Relationship(
        back_populates="teacher", sa_relationship_kwargs={"cascade": "all, delete-orphan"}
    )
    rooms: List["Room"] = Relationship(
        back_populates="teacher", sa_relationship_kwargs={"cascade": "all, delete-orphan"}
    )


class TeacherRead(SQLModel):
    id: int
    username: str
    email: str
    is_verified: bool = False

    @computed_field(alias="hashed_password")
    @property
    def masked_password(self) -> str:
        return "****"


class Group(SQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str

    teacher_id: int = Field(foreign_key="teacher.id")
    teacher: Teacher = Relationship(back_populates="groups")

    rooms: List["Room"] = Relationship(back_populates="group")
    students: List["Student"] = Relationship(
        back_populates="group", sa_relationship_kwargs={"cascade": "all, delete-orphan"}
    )


class Student(SQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str

    group_id: Optional[int] = Field(default=None, foreign_key="group.id")
    group: Optional[Group] = Relationship(back_populates="students")

    participations: List["Participant"] = Relationship(
        back_populates="student", sa_relationship_kwargs={"cascade": "all, delete-orphan"}
    )
